# jpforpalestine

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: index.md  resources.md
docs/onboarding/: how-to-access-jp4p-matrix-element-space.md
docs/resources/: index.md
docs/resources/presentations/: 2024-07-14-JP4Palestine-hasbara.md  2024-08-11-JP4P-TechPodUpdate-Matrix-Element-GitHub.md
onboarding/how-to-access-jp4p-matrix-element-space/: index.html
resources/: index.html
resources/presentations/2024-07-14-JP4Palestine-hasbara/: index.html
resources/presentations/2024-08-11-JP4P-TechPodUpdate-Matrix-Element-GitHub/: index.html
search/: search_index.json
